# Messaging

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GifTranscoder.cpp
app/src/main/java/com/android/messaging/datamodel/action/: ActionServiceImpl.java
app/src/main/java/com/android/messaging/ui/: PermissionCheckActivity.java
app/src/main/java/com/android/messaging/util/: Assert.java  UiUtils.java
app/src/main/res/xml/: apn_editor.xml  apn_settings.xml
chips/: build.gradle
chips/src/main/: AndroidManifest.xml
chips/src/main/res/values/: styles.xml
colorpicker/: build.gradle
colorpicker/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/androidTest/java/com/android/common/: ExampleInstrumentedTest.java
commonframesequence/: build.gradle
commonframesequence/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
photoviewer/: build.gradle
photoviewer/src/main/: AndroidManifest.xml
vcard/: build.gradle
